<resources>
    <string name="app_name">Cidade Inteligente</string>
    <string name="iniciar_sessao">Iniciar Sessao</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Entrar</string>
    <string name="registar_user">Registar novo Utilizador</string>
    <string name="consultar_notas">Consultar Notas</string>
    <string name="registar_texto">Inserir dados do Utilizador</string>
    <string name="nome">Nome</string>
    <string name="data_nasc">Data de Nascimento</string>
    <string name="morada">Morada</string>
    <string name="registar">Registar</string>
    <string name="add_note">adicionar nota</string>
    <string name="textotitulo">Inserir novo report</string>
    <string name="titulo">titulo</string>
    <string name="descricao">descricao</string>
    <string name="guardar">Guardar</string>
    <string name="empty_not_saved">Nota nao inserida</string>
    <string name="empty_not_edit">Nota nao foi atualizada</string>
    <string name="empty_edit">Nota Atualizada</string>
    <string name="empty_delete">Nota removida com sucesso</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_remover">Remover</string>
    <string name="eliminar">Eliminar</string>
    <string name="textotituloeditar">Alterar Nota</string>
    <string name="voltarmapa">Voltar Mapa</string>
    <string name="consultarnomapa">Consultar</string>
    <string name="localizacao">Localizacao</string>
    <string name="tirar_fotografia">Fotografia</string>
    <string name="erro_titulo">Tem de preencher o titulo!</string>
    <string name="erro_desc">Tem de preencher o descricao!</string>
    <string name="erro_local">Tem de preencher a localizacao!</string>
    <string name="logout">Sessão terminada! Obrigado.</string>
    <string name="botao_logout">Sair</string>
    <string name="other_user_report">OUTRO USER REPORT </string>
    <string name="my_report">MEU REPORT</string>
    <string name="gravar_alteracao_dialog">Atualizar</string>
    <string name="apagar_dialog">Apagar</string>
    <string name="atualizar_dialog">Atualizar</string>
    <string name="toast_vazio">Os campos estao vazios!</string>
    <string name="erro_email">Tem de preencher o Email!</string>
    <string name="erro_pass">Tem de preencher a password!</string>
    <string name="login_sucess">Login efetuado com sucesso.</string>
    <string name="login_erro">Utilizador nao existe!</string>
    <string name="report_sucess">Report efetuado com sucesso.</string>
    <string name="report_erro">Erro ao inserir report!</string>
    <string name="report_vazio">Não é possível ter campos vazios.</string>


</resources>