<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_guardar_notas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NotasActivity">



<TextView
        android:id="@+id/textotitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textotitulo"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textotitulo"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edittitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo" />

        <EditText
            android:id="@+id/editdescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descricao" />

        <EditText
            android:id="@+id/editlocalizacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/localizacao" />

        <EditText
            android:id="@+id/editcoordenadas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="coordenadas"
            android:text="Coordenada: " />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_image"
            android:cropToPadding="true"
            android:padding="8dp"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/button_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/tirar_fotografia" />
        android:onClick="dispatchTakePictureIntent"


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/guardar" />

    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/limpar"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/voltarmapa"
            />

        <Button
            android:layout_weight="1"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:text="@string/consultarnomapa"
            />

    </LinearLayout>
</RelativeLayout>