<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_notas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/back"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="400dp"
        android:layout_height="180dp"
        android:src="@drawable/logo"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        android:scaleType="centerCrop"
        android:cropToPadding="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/border_image"/>
    <TextView
        android:id="@+id/textotitulo"
        android:layout_below="@id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sessao"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_below="@id/textotitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_marginBottom="30dp"
            android:hint="@string/password" />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:background="@color/grey"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:id="@+id/botaologin"
            android:onClick="login"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15dp"
            android:textStyle="bold"
            android:onClick="registar_Utilizador"
            android:text="@string/registar_user"/>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/botao_notas"
            android:layout_weight="1"
            android:background="@color/grey"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/consultar_notas"
            android:onClick="consultar"/>



    </LinearLayout>
</RelativeLayout>