<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    tools:context=".MyReport">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_report"
                android:textColor="@color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

            <ImageView
                android:id="@+id/photo_dialog"
                android:layout_below="@+id/text_dialog"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:scaleType="centerCrop"
                android:cropToPadding="true"
                android:background="@drawable/border_image"
                android:layout_centerHorizontal="true"/>

            <EditText
                android:id="@+id/title_dialog"
                android:layout_below="@+id/photo_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:enabled="false"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/edittext_dialog"
                android:layout_below="@+id/title_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:enabled="false"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/localizacao_dialog"
                android:layout_below="@+id/edittext_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:enabled="false"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/data_dialog"
                android:layout_below="@+id/localizacao_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:enabled="false"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"/>

            <EditText
                android:id="@+id/morada_dialog"
                android:layout_below="@+id/data_dialog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:enabled="false"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/gravar_alteracao_dialog"
                android:visibility="gone"
                android:id="@+id/gravar_alteracao_dialog"
                android:layout_below="@+id/morada_dialog"/>

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gravar_alteracao_dialog"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/updateReport"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/atualizar_dialog"
                    />

                <Button
                    android:id="@+id/deleteReport"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/apagar_dialog"
                    />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
